--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/FootballHub" class="image fit"><img src="images/image06.jpg" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/FootballHub" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Sports MVC Pages</h3>											
 											</br>
@@ -121,7 +121,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/MovieTracker" class="image fit"><img src="images/image03.jpg" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/MovieTracker" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Movie Tracker</h3>
 											</br>
@@ -129,7 +129,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/SocialSystem" class="image fit"><img src="images/image04.jpg" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/SocialSystem" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Social System</h3>
 											</br>
