added links to open in new tabs

--- a/index.html
+++ b/index.html
@@ -85,56 +85,56 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/HotelManagment" class="image fit"><img src="images/image02.jpg" alt="" /></a>
+										<a href="https://www.youtube.com/watch?v=dn3HWoLGZXk" target="_blank" class="image fit"><img src="images/image02.jpg" alt="" /></a>
 										<header>
 											<h3>Hotel Managment Software</h3>
 											</br>
-											<a href="https://github.com/mdbosworth96/HotelManagment" class="button2">View Code</a>
+											<a href="https://github.com/mdbosworth96/HotelManagment" target="_blank" class="button2">View Code</a>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/FootballHub" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/FootballHub" target="_blank" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Sports MVC Pages</h3>											
 											</br>
-											<a href="https://github.com/mdbosworth96/FootballHub" class="button2">View Code</a>											
+											<a href="https://github.com/mdbosworth96/FootballHub" target="_blank" class="button2">View Code</a>											
 										</header>																				
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/AugmentedLearningApp" class="image fit"><img src="images/image01.jpg" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/AugmentedLearningApp" target="_blank" class="image fit"><img src="images/image01.jpg" alt="" /></a>
 										<header>
 											<h3>Childrens Learning App</h3>
 											</br>
-											<a href="https://github.com/mdbosworth96/AugmentedLearningApp" class="button2">View Code</a>
+											<a href="https://github.com/mdbosworth96/AugmentedLearningApp" target="_blank" class="button2">View Code</a>
 										</header>
 									</article>
 									
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/MovieTracker" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/MovieTracker" target="_blank" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Movie Tracker</h3>
 											</br>
-											<a href="https://github.com/mdbosworth96/MovieTracker" class="button2">View Code</a>
+											<a href="https://github.com/mdbosworth96/MovieTracker" target="_blank" class="button2">View Code</a>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/AIAdaptation" class="image fit"><img src="images/image05.jpg" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/AIAdaptation" target="_blank" class="image fit"><img src="images/image05.jpg" alt="" /></a>
 										<header>
 											<h3>Final Year Project</h3>
 											</br>
-											<a href="https://github.com/mdbosworth96/AIAdaptation" class="button2">View Code</a>
+											<a href="https://github.com/mdbosworth96/AIAdaptation" target="_blank" class="button2">View Code</a>
 										</header>
 									</article>									
 									<article class="item">
-										<a href="https://github.com/mdbosworth96/SocialSystem" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
+										<a href="https://github.com/mdbosworth96/SocialSystem" target="_blank" class="image fit"><img src="images/coming-soon.png" alt="" /></a>
 										<header>
 											<h3>Social System</h3>
 											</br>
-											<a href="https://github.com/mdbosworth96/SocialSystem" class="button2">View Code</a>
+											<a href="https://github.com/mdbosworth96/SocialSystem" target="_blank" class="button2">View Code</a>
 										</header>
 									</article>
 								</div>
